# ou-container-builder

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  prepare_release.py  pyproject.toml  tox.ini
.github/workflows/: release.yaml  tests.yaml  validation.yaml
demo/: config.yaml
demo/content/: Test.ipynb
demos/openrefine/: ContainerConfig.yaml  Dockerfile
docs/: .buildinfo  building.html  building.rst  conf.py  configuration.html  configuration.rst  genindex.html  index.html  index.rst  installation.html  installation.rst  objects.inv  py-modindex.html  search.html  searchindex.js
docs/.doctrees/: building.doctree  configuration.doctree  environment.pickle  index.doctree  installation.doctree
docs/_sources/: configuration.rst.txt  index.rst.txt
docs/api/: generators.rst  generators_jupyter_notebook.rst  generators_web_app.rst  index.html  index.rst  jupyter_notebook.html  jupyter_notebook.rst  packs.rst  packs_content.rst  packs_openrefine.rst  packs_services.rst  validator.html  web_app.rst
docs/configuration/: content.rst  flags.rst  hacks.rst  index.rst  required.rst  scripts.rst  services.rst
documentation/: Makefile  building.rst  conf.py  configuration.rst  index.rst  installation.rst
src/ou_container_builder/: __main__.py  jupyter_notebook.py  validator.py  web_app.py
tests/: validator_test.py
tests/build_test/: __init__.py  utils.py
tests/validator_test/: basic_test.py  content_test.py  hacks_test.py  jupyter_notebook_test.py  packages_test.py  packs_test.py  scripts_test.py  sources_test.py  tutorial_server_test.py  (+1 more)
(+56 files in other folders)
