[tool.poetry]
name = "ou-container-builder"
version = "0.1.0"
description = ""
authors = ["Mark Hall <mark.hall@open.ac.uk>"]

[tool.poetry.dependencies]
python = "^3.7"
pyyaml = "^5.4.1"
jinja2 = "^2.11.3"
click = "^7.1.2"
cerberus = "^1.3.3"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
ou-container-builder = 'ou_container_builder.__main__:main'
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

